apps/lidarr/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lidarr
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`lidarr.ramoneees.com`)
      kind: Rule
      services:
        - name: lidarr
          port: 8686
  tls:
    secretName: wildcard-ramoneees-com-tls
